<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="36dp">

        <!-- Title with bigger text size -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/cv_builder"
            android:textSize="28sp" />

        <!-- Profile Picture Button -->
        <Button
            android:id="@+id/btnProfilePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/background_color_secondary"
            android:text="@string/profile_picture"
            android:textColor="@android:color/white"

            />

        <!-- Personal Details Button -->
        <Button
            android:id="@+id/btnPersonalDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/background_color_secondary"
            android:text="@string/personal_details"
            android:textColor="@android:color/white" />

        <!-- Summary Button -->
        <Button
            android:id="@+id/btnSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/background_color_secondary"
            android:text="@string/summary"
            android:textColor="@android:color/white" />

        <!-- Education Button -->
        <Button
            android:id="@+id/btnEducation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/background_color_secondary"
            android:text="@string/education"
            android:textColor="@android:color/white" />

        <!-- Experience Button -->
        <Button
            android:id="@+id/btnExperience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/background_color_secondary"
            android:text="@string/experience"
            android:textColor="@android:color/white" />

        <!-- Certifications Button -->
        <Button
            android:id="@+id/btnCertifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/background_color_secondary"
            android:text="@string/certifications"
            android:textColor="@android:color/white" />

        <!-- References Button -->
        <Button
            android:id="@+id/btnReferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/background_color_secondary"
            android:text="@string/references"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/background_color_secondary"
            android:text="Next"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
