<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profilePictureActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/background_color_primary">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_picture"
        android:background="@color/background_color_primary" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="24dp">
       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btnSelectImage"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/select_image"
           android:textColor="@android:color/white"
           android:background="@drawable/button_background"
           android:backgroundTint="@null"
           android:padding="15dp"
           android:layout_marginTop="16dp" />

       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btnSave"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/save"
           android:textAllCaps="false"
           android:textColor="@android:color/white"
           android:background="@color/background_color_secondary"
           android:layout_marginTop="16dp" />

       <Button
           android:id="@+id/btnCancel"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/cancel"
           android:textColor="@android:color/white"
           android:background="@color/background_color_secondary"
           android:layout_marginTop="8dp" />
   </LinearLayout>

</LinearLayout>
